--- a/index.html
+++ b/index.html
@@ -16,12 +16,51 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <h1 class="col-4">First Bootstrap Project</h1>
+            <h1 class="col-5">First Bootstrap Project</h1>
         </div>
         <div class="row">
-            <div class="col-3 bg-primary">Grid 1</div>
+            <div class="col-3 bg-warning">Grid 1</div>
             <div class="col-6 bg-success">Grid 2</div>
             <div class="col-3 bg-danger">Grid 3</div>
+        </div>
+        <div class="row">
+            <form class="col-12 border border-primary p-3">
+                <div class="form-group">
+                    <label for="emailinput">Email Address</label>
+                    <input type="email" class="form-control" id="emailinput">
+                </div>
+                <div class="form-group">
+                    <label for="passwordinput">Password</label>
+                    <input type="password" class="form-control" id="passwordinput">
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="check1">
+                    <label class="form-check-label" for="check1">Dog</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="check2">
+                    <label class="form-check-label" for="check2">Cat</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                    <label class="form-check-label" for="exampleRadios1">
+                      Cheese Pizza
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                    <label class="form-check-label" for="exampleRadios2">
+                      Hawaiian Pizza
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+                    <label class="form-check-label" for="exampleRadios3">
+                      Supreme Pizza
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
     </div>
 
