added everything in the cards section of the lab

--- a/index.html
+++ b/index.html
@@ -62,6 +62,58 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h3 class="card-title">Stacey Godbee</h3>
+                        <p class="card-text">Stacey is my girlfriend and is studying animation</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h3 class="card-title">Kyle Farmer</h3>
+                        <p class="card-text">kyle is my friend who is also studying javascript</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h3 class="card-title">Blake Wimberly</h3>
+                        <p class="card-text">Blake is my bandmate who plays drums</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h3 class="card-title">Scotty Lee</h3>
+                        <p class="card-text">scotty is my former bandmate who plays music</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h3 class="card-title">Adam Blevins</h3>
+                        <p class="card-text">Adam is my best friend who is a travel agent</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h3 class="card-title">David Brown</h3>
+                        <p class="card-text">David is my bandmate who plays bass and sings</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
